--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 								  <h2 class="h3 text mb-3">Meu pedido</h2>
 								  <div class="row">
 									<div class="col-md-7 d-print-none">
-									  <div class="my-2"><form action="https://formspree.io/f/mbljljer"
+									  <div class="my-2"><form action="https://formspree.io/f/xanyorww"
 								  method="POST">
 								<div class="row">
 								  <div class="col-6">
