--- a/index.html
+++ b/index.html
@@ -432,42 +432,7 @@
 			<!-- End menu Area -->
 
 
-			<section class="menu-area section-gap" id="co">
-				<div class="container">
-					<div class="row d-flex justify-content-center">
-						<div class="menu-content pb-60 col-lg-10">
-							<div class="title text-center">
-								<h1 class="mb-10">Você poderá realizar o pedido por aqui tanto via e-mail como WhatsApp:</h1>
-								<hr class="d-print-none"/>
-								
-								  <h2 class="h3 text mb-3">Meu pedido</h2>
-								  <div class="row">
-									<div class="col-md-7 d-print-none">
-									  <div class="my-2"><form action="https://formspree.io/f/xanyorww"
-								  method="POST">
-								<div class="row" style="justify-content: space-around";>
-								  <div class="col-6">
-									<input class="form-control" type="text" id="name" name="name" placeholder="Seu Nome" required>
-								  </div>
-								  <div class="col-6">
-									<input class="form-control" type="email" id="email" name="_replyto" placeholder="Seu E-mail ou WhatsApp." required>
-								  </div>
-								</div>
-								<div class="form-group my-2">
-								  <textarea class="form-control" style="resize: none;" id="message" name="message" rows="4"  placeholder="Descreva aqui os itens que escolheu e suas personalizações." required></textarea>
-								</div>
-								<button class="btn btn-primary mt-2" type="submit">Realizar Pedido.</button>
-							  </form>
-									  </div>
-									</div>
-							</div>
-						
-					</div>	
-				</div>	
-			</section>
-			<iframe src="https://whatsform.com/fobk8h" width="100%" height="600" frameborder="0"></iframe>
-
-			
+			<iframe src="https://whatsform.com/vvnvzp" width="100%" height="600" frameborder="0"></iframe>
 
 			<!-- start footer Area -->		
 			<footer class="footer-area section-gap">
@@ -488,7 +453,7 @@
 				</div>
 			</footer>	
 			<!-- End footer Area -->	
-			<script async src="https://whatsform.com/launcher.js" id="wf-widget" data-id="fobk8h" data-message="Realize seu Pedido" ></script>			<script src="js/vendor/jquery-2.2.4.min.js"></script>
+			<script async src="https://whatsform.com/launcher.js" id="wf-widget" data-id="vvnvzp" data-message="Realize seu Pedido" ></script>			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 			<script src="js/vendor/bootstrap.min.js"></script>			
 			<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
