--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				          <li><a href="#coffe">Panettone</a></li>
 						  <li><a href="#cof">Chocottone</a></li>
 						  <li><a href="#coffee">Recheios</a></li>
-						  <li><a href="#co">Realize seu Pedido</a></li>
+						  <li><a href="elements.html">Realize seu Pedido</a></li>
 				        </ul>
 				      </nav><!-- #nav-menu-container -->		    		
 			    	</div>
@@ -429,10 +429,6 @@
 					
 				</div>	
 			</section>
-			<!-- End menu Area -->
-
-
-			<iframe src="https://whatsform.com/vvnvzp" width="100%" height="600" frameborder="0"></iframe>
 
 			<!-- start footer Area -->		
 			<footer class="footer-area section-gap">
