--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				          <li><a href="#coffe">Panettone</a></li>
 						  <li><a href="#cof">Chocottone</a></li>
 						  <li><a href="#coffee">Recheios</a></li>
-						  <li><a href="elements.html">Realize seu Pedido</a></li>
+						  <li><a href="pedidos.html">Realize seu Pedido</a></li>
 				        </ul>
 				      </nav><!-- #nav-menu-container -->		    		
 			    	</div>
@@ -75,20 +75,24 @@
 				</div>
 			</section>
 			<!-- End banner Area -->	
+			<section class="video-sec-area pb-100 pt-40">
+				<div class="container">
+						</div>						
+						<div class="title text-center col-lg-6 video-left">
+							<h6 style="font-size: 40px; position: absolute;">ChoccoRose</h6>
+						</div>
 
+			</section>
 			<!-- Start video-sec Area -->
 			<section class="video-sec-area pb-100 pt-40" id="about">
 				<div class="container">
 					<div class="row justify-content-start align-items-center">
 						<div class="col-lg-6 video-right justify-content-center align-items-center d-flex">
-							<div class="overlay overlay-bg"></div>
-							<a class="play-btn" href="img/videochocco.MP4" target="_blank">
-								<img class="img-fluid" src="img/play-icon.png" alt="Play Video">
-							</a>
+						
 						</div>						
 						<div class="col-lg-6 video-left">
-							<h6>Esta Aberta oficialmente a nossa Agenda de Natal 2024.</h6>
-							<p>Natal é tempo de confraternizar e promover lembranças, deixe sua mesa ainda mais linda e saborosa com nossos lindos e deliciosos Panettones e Chocottones. Torne esse Momento Inesquecível para todos que você Ama.</p>
+							<h6 style="font-size: 18px;">A ChoccoRose Confeitaria</h6>
+							<p>Está no mercado desde 2012, sempre produzindo para nossos clientes produtos inteiramente artesanais. Cada produto é feito à mão com ingredientes de qualidade e muito amor. São produtos personalizados, únicos e pensados especialmente para nossos clientes. Aqui você terá massas úmidas, perfumadas e com muito recheio. Nossos chocottones e panettones recheados são saborosos sem ser enjoativos e com muita qualidade. Nossas decorações natalinas são feitas uma a uma. São modelagens comestíveis ou se preferir o cliente pode personalizar conosco.</p>
 						</div>
 					</div>
 				</div>	
@@ -414,6 +418,21 @@
 					</div>
 				</div>	
 			</section>
+
+			<section class="menu-area section-gap" id="coffee">
+				<div class="container">
+					<div class="row d-flex justify-content-center">
+						<div class="menu-content pb-60 col-lg-10">
+							<div class="title text-center video-left">
+								<h6 >Esta Aberta oficialmente a nossa Agenda de Natal 2024.</h6>
+								<p>Natal é tempo de confraternizar e promover lembranças, deixe sua mesa ainda mais linda e saborosa com nossos lindos e deliciosos Panettones e Chocottones. Torne esse Momento Inesquecível para todos que você Ama.</p>
+							</div>
+						</div>
+					</div>						
+					
+				</div>	
+			</section>
+			
 			<!-- End menu Area -->
 			<!-- Start menu Area -->
 			<section class="menu-area section-gap" id="coffee">
