--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-60 col-lg-10">
 							<div class="title text-center">
-								<h1 class="mb-10">Essas são as opções de Panettones</h1>
+								<h1 class="mb-10">Essas são nossas opções de Panettones</h1>
 								<p>Todos feitos com muito carinho e qualidade. </p>
 							</div>
 						</div>
@@ -191,7 +191,7 @@
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-60 col-lg-10">
 							<div class="title text-center">
-								<h1 class="mb-10">Essas são as opções de Chocottones</h1>
+								<h1 class="mb-10">Essas são nossas opções de Chocottones</h1>
 								<p>Todos feitos com muito carinho e qualidade. </p>
 							</div>
 						</div>
