--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 	<!DOCTYPE html>
 	<html lang="zxx" class="no-js">
 	<head>
+		<link rel="shortcut icon" href="img/" />
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Favicon-->
@@ -78,6 +79,8 @@
 			
 						<div class="title text-center col-lg-6 video-left">
 							<h6 style="font-size: 40px; position: absolute;">ChoccoRose</h6>
+							<h6 style="font-size: 10px; position: absolute;">confeitaria artesanal.</h6>
+
 						</div>
 
 			
