--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 						
 						</div>						
 						<div class="col-lg-6 video-left">
-							<h6 class="title text-center video-left" style="font-size: 18px;">A ChoccoRose Confeitaria</h6>
-							<p class="title text-center video-left">Está no mercado desde 2012, sempre produzindo para nossos clientes produtos inteiramente artesanais. Cada produto é feito à mão com ingredientes de qualidade e muito amor. São produtos personalizados, únicos e pensados especialmente para nossos clientes. Aqui você terá massas úmidas, perfumadas e com muito recheio. Nossos chocottones e panettones recheados são saborosos sem ser enjoativos e com muita qualidade. Nossas decorações natalinas são feitas uma a uma. São modelagens comestíveis ou se preferir o cliente pode personalizar conosco.</p>
+							<h6 class="title text-center " >A ChoccoRose Confeitaria</h6>
+							<p class="title text-center ">Está no mercado desde 2012, sempre produzindo para nossos clientes produtos inteiramente artesanais. Cada produto é feito à mão com ingredientes de qualidade e muito amor. São produtos personalizados, únicos e pensados especialmente para nossos clientes. Aqui você terá massas úmidas, perfumadas e com muito recheio. Nossos chocottones e panettones recheados são saborosos sem ser enjoativos e com muita qualidade. Nossas decorações natalinas são feitas uma a uma. São modelagens comestíveis ou se preferir o cliente pode personalizar conosco.</p>
 						</div>
 					</div>
 				</div>	
