--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 				          <li><a href="#coffe">Panettone</a></li>
 						  <li><a href="#cof">Chocottone</a></li>
 						  <li><a href="#coffee">Recheios</a></li>
-						  <li><a href="pedidos.html">Realize seu Pedido</a></li>
 				        </ul>
 				      </nav><!-- #nav-menu-container -->		    		
 			    	</div>
@@ -115,7 +114,7 @@
 								<div class="title-div justify-content-between d-flex">
 									<h4>Panettone Recheado e Decorado 500 gramas</h4>
 									<p class="price float-right">
-										R$ 60,00
+										R$ 65,00
 									</p>
 								</div>
 								<p>
@@ -132,7 +131,7 @@
 								<div class="title-div justify-content-between d-flex">
 									<h4>Panettone Recheado e Decorado 500 gramas</h4>
 									<p class="price float-right">
-										R$ 70,00
+										R$ 75,00
 									</p>
 								</div>
 								<p>
@@ -149,7 +148,7 @@
 								<div class="title-div justify-content-between d-flex">
 									<h4>Panettone Recheado e Decorado 100 gramas</h4>
 									<p class="price float-right">
-										R$ 16,00
+										R$ 18,00
 									</p>
 								</div>
 								<p>
@@ -166,7 +165,7 @@
 								<div class="title-div justify-content-between d-flex">
 									<h4>Panettone Recheado e Decorado 100 gramas</h4>
 									<p class="price float-right">
-										R$ 20,00
+										R$ 22,00
 									</p>
 								</div>
 								<p>
@@ -201,7 +200,7 @@
 								<div class="title-div justify-content-between d-flex">
 									<h4>Chocottone Recheado e Decorado 500 gramas</h4>
 									<p class="price float-right">
-										R$ 65,00
+										R$ 75,00
 									</p>
 								</div>
 								<p>
@@ -220,7 +219,7 @@
 								<div class="title-div justify-content-between d-flex">
 									<h4>Chocottone Recheado e Decorado 500 gramas</h4>
 									<p class="price float-right">
-										R$ 75,00
+										R$ 85,00
 									</p>
 								</div>
 								<p>
@@ -239,7 +238,7 @@
 								<div class="title-div justify-content-between d-flex">
 									<h4>Chocottone Recheado e Decorado 100 gramas</h4>
 									<p class="price float-right">
-										R$ 18,00
+										R$ 19,00
 									</p>
 								</div>
 								<p>
@@ -258,7 +257,7 @@
 								<div class="title-div justify-content-between d-flex">
 									<h4>Chocottone Recheado e Decorado 100 gramas</h4>
 									<p class="price float-right">
-										R$ 22,00
+										R$ 23,00
 									</p>
 								</div>
 								
@@ -440,8 +439,8 @@
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-60 col-lg-10">
 							<div class="title text-center">
-								<h1 class="mb-10">Estaremos aceitando encomendas até o dia 13/12. As entregas ou retiradas serão a partir do dia 18/12 até o dia 21/12 com dia e hora marcada.</h1>
-								<p>*** Por ser um trabalho artesenal não trabalhamos com pronta entrega somente encomendas, caso queira realizar uma encomenda para retirada ou entrega antes do dia 18 será acrescido o valor de 20,00 reais e o prazo de produção será de 7 dias, para pedidos mais especificos entrar em contato.  ***</p>
+								<h1 class="mb-10">Estaremos aceitando encomendas até o dia 12/12. As entregas ou retiradas serão a partir do dia 17/12 até o dia 20/12 com dia e hora marcada.</h1>
+								<p>*** Por ser um trabalho artesanal não trabalhamos com pronta entrega somente encomendas, caso queira realizar uma encomenda para retirada ou entrega antes do dia 17/12 será acrescido o valor de 20,00 reais e o prazo de produção será de 7 dias, para pedidos mais específicos entrar em contato.  ***</p>
 							</div>
 						</div>
 					</div>						
@@ -467,7 +466,6 @@
 				</div>
 			</footer>	
 			<!-- End footer Area -->	
-			<script async src="https://whatsform.com/launcher.js" id="wf-widget" data-id="vvnvzp" data-message="Realize seu Pedido" ></script>			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 			<script src="js/vendor/bootstrap.min.js"></script>			
 			<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
