--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 				          <li><a href="#coffe">Panettone</a></li>
 						  <li><a href="#cof">Chocottone</a></li>
 						  <li><a href="#coffee">Recheios</a></li>
-						  <li><a href="pedidos.html">Realize seu Pedido</a></li>
 				        </ul>
 				      </nav><!-- #nav-menu-container -->		    		
 			    	</div>
@@ -472,7 +471,7 @@
 			     WHATSAPP FLOATING BUTTON
 			     Botão flutuante responsivo de WhatsApp
 			     ======================================== -->
-			<a href="https://wa.me/5511971987541?text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es" 
+			<a href="https://wa.me/5511971987541?text=Ol%C3%A1!%20Se%20j%C3%A1%20viu%20os%20valores%20e%20sabores%20e%20se%20decidiu%2C%20deixe%20aqui%20o%20seu%20pedido%20com%20as%20quantidades%20e%20detalhes%20que%20logo%20iremos%20lhe%20retornar!%0A%0ACaso%20ainda%20n%C3%A3o%2C%20confira%20em%20nosso%20site%3A%20choccorose.github.io" 
 			   class="whatsapp-float-btn" 
 			   target="_blank" 
 			   id="whatsapp-btn"
