--- a/index.html
+++ b/index.html
@@ -108,20 +108,20 @@
 								<p>Veja alguns dos nossos produtos. Passe o carrossel e escolha o seu favorito.</p>
 							</div>
 							<div class="owl-carousel products-carousel">
-								<div class="item"><img src="produtos/WhatsApp Image 2025-11-13 at 18.54.03.jpeg" alt="Produto 1"/></div>
-								<div class="item"><img src="produtos/WhatsApp Image 2025-11-13 at 18.54.01.jpeg" alt="Produto 2"/></div>
-								<div class="item"><img src="produtos/WhatsApp Image 2025-11-13 at 18.54.00.jpeg" alt="Produto 3"/></div>
-								<div class="item"><img src="produtos/WhatsApp Image 2025-11-13 at 18.54.00 (1).jpeg" alt="Produto 4"/></div>
-								<div class="item"><img src="produtos/WhatsApp Image 2025-11-13 at 18.53.59.jpeg" alt="Produto 5"/></div>
-								<div class="item"><img src="produtos/WhatsApp Image 2025-11-13 at 18.53.59 (2).jpeg" alt="Produto 6"/></div>
-								<div class="item"><img src="produtos/WhatsApp Image 2025-11-13 at 18.53.59 (1).jpeg" alt="Produto 7"/></div>
-								<div class="item"><img src="produtos/WhatsApp Image 2025-11-13 at 18.53.58.jpeg" alt="Produto 8"/></div>
-								<div class="item"><img src="produtos/WhatsApp Image 2025-11-13 at 18.53.58 (1).jpeg" alt="Produto 9"/></div>
-								<div class="item"><img src="produtos/WhatsApp Image 2025-11-13 at 18.53.57.jpeg" alt="Produto 10"/></div>
-								<div class="item"><img src="produtos/WhatsApp Image 2025-11-13 at 18.53.56.jpeg" alt="Produto 11"/></div>
-								<div class="item"><img src="produtos/WhatsApp Image 2025-11-13 at 18.53.56 (2).jpeg" alt="Produto 12"/></div>
-								<div class="item"><img src="produtos/WhatsApp Image 2025-11-13 at 18.53.56 (1).jpeg" alt="Produto 13"/></div>
-								<div class="item"><img src="produtos/WhatsApp Image 2025-11-13 at 18.53.55.jpeg" alt="Produto 14"/></div>
+								<div class="item"><img loading="lazy" src="produtos/WhatsApp Image 2025-11-13 at 18.54.03.jpeg" alt="Produto 1"/></div>
+								<div class="item"><img loading="lazy" src="produtos/WhatsApp Image 2025-11-13 at 18.54.01.jpeg" alt="Produto 2"/></div>
+								<div class="item"><img loading="lazy" src="produtos/WhatsApp Image 2025-11-13 at 18.54.00.jpeg" alt="Produto 3"/></div>
+								<div class="item"><img loading="lazy" src="produtos/WhatsApp Image 2025-11-13 at 18.54.00 (1).jpeg" alt="Produto 4"/></div>
+								<div class="item"><img loading="lazy" src="produtos/WhatsApp Image 2025-11-13 at 18.53.59.jpeg" alt="Produto 5"/></div>
+								<div class="item"><img loading="lazy" src="produtos/WhatsApp Image 2025-11-13 at 18.53.59 (2).jpeg" alt="Produto 6"/></div>
+								<div class="item"><img loading="lazy" src="produtos/WhatsApp Image 2025-11-13 at 18.53.59 (1).jpeg" alt="Produto 7"/></div>
+								<div class="item"><img loading="lazy" src="produtos/WhatsApp Image 2025-11-13 at 18.53.58.jpeg" alt="Produto 8"/></div>
+								<div class="item"><img loading="lazy" src="produtos/WhatsApp Image 2025-11-13 at 18.53.58 (1).jpeg" alt="Produto 9"/></div>
+								<div class="item"><img loading="lazy" src="produtos/WhatsApp Image 2025-11-13 at 18.53.57.jpeg" alt="Produto 10"/></div>
+								<div class="item"><img loading="lazy" src="produtos/WhatsApp Image 2025-11-13 at 18.53.56.jpeg" alt="Produto 11"/></div>
+								<div class="item"><img loading="lazy" src="produtos/WhatsApp Image 2025-11-13 at 18.53.56 (2).jpeg" alt="Produto 12"/></div>
+								<div class="item"><img loading="lazy" src="produtos/WhatsApp Image 2025-11-13 at 18.53.56 (1).jpeg" alt="Produto 13"/></div>
+								<div class="item"><img loading="lazy" src="produtos/WhatsApp Image 2025-11-13 at 18.53.55.jpeg" alt="Produto 14"/></div>
 							</div>
 						</div>
 					</div>
@@ -146,7 +146,17 @@
 					.products-carousel .item img { height: 200px; }
 				}
 				@media (max-width: 480px) {
-					.products-carousel .item img { height: 160px; }
+					/* Em mobile mostramos a imagem inteira sem crop */
+					.products-carousel .item img {
+						height: auto;
+						object-fit: contain; /* mostra a imagem inteira */
+						max-height: 420px; /* limita altura para não estourar a página */
+						width: auto;
+						max-width: 100%;
+						display: block;
+						margin: 0 auto;
+					}
+					.products-carousel .item { padding: 6px; }
 				}
 			</style>
 			<script>
