--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 						<div class="col-lg-4">
 							<div class="single-menu">
 								<div class="title-div justify-content-between d-flex">
-									<h4>Doce de Leite com Nozes</h4>
+									<h4>Doce de Leite com Castanha</h4>
 									<p class="price float-right">
 									</p>
 								</div>
